Re-fixed style bug I caused

--- a/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-light text-light navbar-transparent bg-faded nav-sticky nav-stick-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-stick-top">
 
             <!--<nav class="navbar navbar-expand-lg navbar-light navbar-transparent bg-faded nav-sticky nav-stick-top">-->
             <div class="container">
