Added filter by severity on summary page

--- a/CollisionsDB/CollisionsDB/Views/Home/Analytics.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Analytics.cshtml
@@ -18,8 +18,8 @@
     <div class="row">
         <div class="col-lg-4 mb30">
             <div class="d-flex justify-content-center">
-                <a href="/Home/HeatMap?width=400">
-                    <img src="/Home/HeatMap?width=186" class="img-fluid mb20" />
+                <a href="~/images/PredictionHeatMap_large.png">
+                    <img src="~/images/PredictionHeatMap_small.png" class="img-fluid mb20" />
                 </a>
             </div>
             <h4 class="text-uppercase">Severity Prediction Map</h4>
