--- a/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Summary">Summary</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Summary">Database</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Analytics">Analytics</a>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="col-lg-5">
-                    <span>&copy; Copyright 2022. <a asp-controller="Home" asp-action="Privacy">Privacy</a></span>
+                    <span class="text-light">&copy; Copyright 2022. <a asp-controller="Home" asp-action="Privacy">Privacy</a></span>
                 </div>
             </div>
         </div>
