--- a/CollisionsDB/CollisionsDB/Views/Home/Summary.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Summary.cshtml
@@ -22,6 +22,13 @@
             <vc:counties></vc:counties>
         </div>
         <div class='col-9'>
+            <div class="d-flex align-items-center mb-3">
+                <span class="font-weight-bold mr-2">Filter by severity:</span>
+                    @for(int i = 1; i <= 5; i++)
+                    {
+                        <a class="btn btn-outline-secondary btn-sm m-1" asp-route-severity="@i" asp-controller="Home" asp-action="Summary">@i</a>
+                    }
+            </div>
             <table class="table table-sm table-striped table-bordered">
                 <thead>
                     <tr>
