--- a/CollisionsDB/CollisionsDB/Views/Shared/Components/Counties/Default.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/Components/Counties/Default.cshtml
@@ -4,7 +4,7 @@
 @model IEnumerable<string>
 
 <div class="d-grid gap-2">
-    <a asp-controller="Home" asp-action="Summary" asp-route-county="" asp-route-pageNum="1" class="btn btn-outline-secondary btn-block">View All</a>
+    <a asp-controller="Home" asp-action="Summary" asp-route-county="" asp-route-pageNum="1" class="btn btn-outline-secondary btn-block">All Counties</a>
 
     @foreach (string c in Model)
     {
