Fixed CSP issues

--- a/CollisionsDB/CollisionsDB/Views/Home/Index.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <!--Hero Section-->
-<div class="bg-parallax fullscreen parallax-overlay" data-jarallax='{"speed": 0.2}' style='background-image: url(~/wwwroot/images/driver_in_car.jpg)'>
+<div class="bg-parallax fullscreen parallax-overlay" data-jarallax='{"speed": 0.2}' style='background-image: url(~/images/driver_in_car.jpg)'>
         <div class="d-flex align-items-center">
             <div class="container">
                 <div class=" row">
@@ -59,7 +59,7 @@
 <div class="half-image-content bg-faded">
     <div class="content-img bg-parallax-left pos-left hidden-lg-down" data-jarallax='{"speed": 0.2}' style="background:">
     </div>
-    <img src="../wwwroot/images/computerpeople.jpg" class="visible-lg-down img-fluid hidden-lg-up" alt="">
+    <img src="~/images/computerpeople.jpg" class="visible-lg-down img-fluid hidden-lg-up" alt="">
     <div class="container">
         <div class="row">
             <div class="col-lg-5 ml-lg-auto pt70 pb70">
