--- a/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
@@ -18,8 +18,14 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 
     <!--Content Security Header -->
-    <!--<meta http-equiv="Content-Security-Policy"
-          content="default-src 'self'; child-src 'none'; script-src 'self'; img-src 'self'; style-src 'self' 'unsafe-inline';" />-->
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self';
+          child-src 'none';
+          script-src 'self' 'unsafe-eval' *.fontawesome.com;
+          connect-src ka-f.fontawesome.com;
+          img-src 'self';
+          style-src 'self' 'unsafe-inline' fonts.googleapis.com;
+          font-src 'self' * fonts.gstatic.com" />
 
     <!--Font Awesome Icons-->
     <script src="https://kit.fontawesome.com/2473e98242.js" crossorigin="anonymous"></script>
