--- a/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
 
     @RenderBody()
 
-    <partial name="_CookieConsentPartial" />
+    <partial name="_CookieConsentPartial" class="cookie"/>
 
     <!--Footer-->
     <div class="footer-bottomAlt">
